# rustorium

./: .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md  README.md.new  api-client.js  api-only.sh  app.js  build_web.sh  check_services.sh  config.toml  fast-run.sh  index.html  main_part1.rs  main_part2.rs  release-run.sh  run_all.sh  standalone_api.rs  start_python_services.sh  start_server.sh  start_services.sh  stop_python_services.sh  stop_server.sh  stop_services.sh  websocket-client.js
.cargo/: config.toml  config.toml.bak
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: blockchain.rs  contracts.rs  main.rs  main_integration.rs
api/src/consensus/: mod.rs  pos.rs  resource_monitor.rs  rewards.rs  validator.rs
api/src/scaling/: adaptive_config.rs  load_balancer.rs  metrics.rs  mod.rs  sharding.rs
api_server/: api.py  blockchain.py  requirements.txt
benches/: benchmark.rs  consensus_bench.rs  sharding_bench.rs  storage_bench.rs  tps_benchmark.rs
cli/: Cargo.toml
cli/src/: app.rs  display.rs  main.rs
cli/src/api/: mod.rs  models.rs
cli/src/commands/: mod.rs
cli/src/commands/account/: mod.rs
cli/src/commands/block/: mod.rs
config/: default.toml
contracts/: Cargo.toml
contracts/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: avalanche.rs  hotstuff.rs  lib.rs  raft.rs  tendermint.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  config.rs  consensus.rs  lib.rs  metrics.rs  network.rs  runtime.rs  state.rs  storage.rs  transaction.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: custom.rs  lib.rs  libp2p.rs  quic.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: custom.rs  evm.rs  lib.rs  move_vm.rs  wasm.rs
crates/storage/: Cargo.toml
crates/storage/src/: custom.rs  lib.rs  rocksdb.rs  tikv.rs
docs/: README.md  architecture.md  contributing.md  governance.md  installation.md  project-structure.md  quickstart.md  sharding.md  token-system.md  usage.md  validator.md
docs/api/: README.md  graphql.md  overview.md  reference.md  rest.md  websocket.md
docs/architecture/: README.md  development.md  overview.md  storage.md
docs/book/src/: README.md  SUMMARY.md
docs/components/: avalanche.md  overview.md  sharding.md
docs/features/: ai-layer.md  consensus.md  dag-execution.md  multi-vm.md  quic.md  redpanda.md  sharding.md  storage.md  zero-knowledge.md
docs/guides/: accounts.md  ai-insights.md  basic-usage.md  blocks-explorer.md  development.md  installation.md  network-selection.md  performance.md  security.md  service-management.md  smart-contracts.md  tokens.md  transactions.md  wallet.md
docs/tech-stack/: gluon.md  noria.md  quic.md  redpanda.md  tikv.md
examples/: nft_contract.sol  simple_storage.abi.json  simple_storage.bytecode.txt  simple_storage.sol  sustainable_blockchain_demo.rs  test_contract.sh  test_nft.sh  test_token.sh  token_contract.sol
examples/counter/: README.md
examples/counter/contracts/: counter.rs
examples/counter/tests/: e2e.rs
frontend/: Cargo.toml  accounts.js  ai.js  analytics.js  animations.css  components.js  contracts.js  display-utils.js  index.html  package-lock.json  package.json  theme.css  theme.js  transactions.js  vite.config.ts  wallet.css  websocket-client.js
frontend/css/: style.css
frontend/js/: app.js
frontend/public/: index.html
frontend/src/: App.tsx  App.vue  main.rs  main.tsx  theme.ts
frontend/src/components/: Navbar.tsx  Terminal.vue
frontend/src/hooks/: useNodeMetrics.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
logging/: docker-compose.yml  kibana-dashboard.ndjson
logging/apm-server/: apm-server.yml
logging/filebeat/: filebeat.yml
logging/logstash/pipeline/: rustorium.conf
monitoring/: alertmanager.yml  dashboard.json  docker-compose.yml  prometheus.yml
monitoring/rules/: alerts.yml
scripts/: deploy.sh  install.sh  run_nodes.sh
scripts/setup/: linux.sh  macos.sh  windows.ps1
src/: blockchain.rs  config.rs  fast_main.rs  integrated_server.rs  lib.rs  main.rs  metrics.rs  node.rs  services.rs  sustainable.rs
src/ai/: detector.rs  mod.rs  predictor.rs
src/api/: handlers.rs  mod.rs  models.rs  server.rs  standalone.rs  web.rs
src/api/graphql/: mod.rs
src/api/rest/: mod.rs
src/api/tests/: wallet.rs
src/api/websocket/: mod.rs
src/cli/: console.rs  help.rs  mod.rs  options.rs  server.rs  state.rs
src/commands/: mod.rs
src/commands/account/: mod.rs
src/commands/analytics/: mod.rs
src/commands/config/: mod.rs
src/commands/contract/: mod.rs
src/commands/network/: mod.rs
src/commands/security/: mod.rs
src/commands/token/: mod.rs
src/commands/tx/: mod.rs
src/common/: config.rs  errors.rs  mod.rs  types.rs  utils.rs
src/consensus/: avalanche.rs  mod.rs  validator.rs
src/core/: avalanche.rs  dag.rs  engine.rs  mod.rs  sharding.rs  types.rs
src/core/ai/: mod.rs
src/core/avalanche/: mod.rs  voting.rs
src/dag/: executor.rs  graph.rs  mod.rs
src/disabled/: integrated_server.rs
src/gossip/: message.rs  mod.rs  network.rs  peer.rs  protocol.rs
src/i18n/: mod.rs
src/network/: mod.rs  p2p.rs  types.rs
src/sharding/: cross_shard.rs  manager.rs  mod.rs  rebalancer.rs  ring.rs
src/storage/: cache.rs  db.rs  init.rs  mod.rs  state.rs
src/util/: mod.rs
src/vm/: evm.rs  executor.rs  mod.rs  wasm.rs
src/web/: api.rs  error.rs  mod.rs  mod.rs.new  websocket.rs  ws.rs
standalone_api/: Cargo.toml
standalone_api/src/: blockchain.rs  main.rs
web/: Cargo.toml  app.js  blocks.js  index.html  style.css
web/src/: api.rs  lib.rs  main.rs  models.rs  utils.rs
web/src/components/: block_list.rs  layout.rs  mod.rs  status_card.rs  transaction_list.rs
web/src/pages/: accounts.rs  blocks.rs  dashboard.rs  mod.rs  send_transaction.rs  settings.rs  transactions.rs
web_ui/: Cargo.toml
web_ui/src/: main.rs
web_ui/static/: accounts.js  api-client.js  app.js  blocks.js  index.html  network-utils.js  network.js  style.css  theme.js  transactions.js  wallet.js
(+63 files in other folders)
