[package]
name = "rustorium"
version = "0.1.0"
edition = "2021"
description = "Next-generation ultra-low latency distributed blockchain platform"
authors = ["Rustorium Team <team@rustorium.dev>"]
license = "MIT"
repository = "https://github.com/enablerdao/rustorium"

[dependencies]
# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# ネットワーク
quinn = "0.10"  # QUIC実装
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux"] }
redpanda = "0.1"  # Redpanda Rustクライアント

# ストレージ
tikv-client = "0.3"  # TiKVクライアント
redb = "1.0"  # 組み込みデータベース
noria = "0.10"  # ストリーミングデータフロー

# コンセンサス
gluon-consensus = "0.1"  # Gluonコンセンサス
tendermint = "0.30"  # Tendermintコア

# 暗号化
poseidon-rs = "0.1"  # Poseidonハッシュ
ed25519-dalek = "2.0"  # 署名
blake3 = "1.5"  # 高速ハッシュ

# スマートコントラクト
wasmer = "4.2"  # WebAssembly実行環境
wasmtime = "14.0"  # 代替WebAssembly実行環境

# API
axum = "0.7"  # Webフレームワーク
tonic = "0.10"  # gRPC
async-graphql = "6.0"  # GraphQL

# モニタリング
prometheus = "0.13"  # メトリクス
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"

# ユーティリティ
anyhow = "1.0"  # エラー処理
thiserror = "1.0"  # カスタムエラー
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"  # 設定管理
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.3"
mockall = "0.11"

[build-dependencies]
tonic-build = "0.10"

[workspace]
members = [
    "crates/core",
    "crates/network",
    "crates/consensus",
    "crates/storage",
    "crates/api",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2

[[bench]]
name = "transaction"
harness = false

[[bench]]
name = "consensus"
harness = false

[[bench]]
name = "storage"
harness = false
