[package]
name = "rustorium"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

# P2P通信
quinn = "0.10"

# イベントストリーミング
rdkafka = { version = "0.34", features = ["cmake-build"] }

# 分散コンピューティング
gluon = "0.17"

# データフロー処理
noria-server = "0.6"

# 分散KVストア
tikv-client = "0.3"

# モニタリング
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "transaction"
harness = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
