[workspace]
members = [
    "crates/core",
    "crates/network",
    "crates/consensus",
    "crates/storage",
    "crates/runtime",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GQT Team"]
license = "MIT"

[workspace.dependencies]
# 共通の依存関係
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

# P2P通信モジュール
quinn = "0.10"
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux"] }

# イベントストリーミング
rdkafka = { version = "0.34", features = ["cmake-build"] }

# 分散コンピューティング
gluon = "0.17"

# データフロー処理
noria-server = "0.6"

# 分散KVストア
tikv-client = "0.3"
rocksdb = "0.21"

# モニタリング
opentelemetry = { version = "0.20", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "gqt"
path = "src/main.rs"

[dependencies]
gqt-core = { path = "crates/core" }
gqt-network = { path = "crates/network" }
gqt-consensus = { path = "crates/consensus" }
gqt-storage = { path = "crates/storage" }
gqt-runtime = { path = "crates/runtime" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
