[package]
name = "rustorium-cli"
version = "0.1.0"
edition = "2021"
description = "Command Line Interface for Rustorium blockchain platform"
authors = ["OpenHands <openhands@all-hands.dev>"]

[dependencies]
rustyline = "10.0.0"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
anyhow = "1.0.69"
thiserror = "1.0.38"
chrono = { version = "0.4.23", features = ["serde"] }
term_size = "0.3.2"
tui = "0.19.0"
crossterm = "0.25.0"
indicatif = "0.17.3"
console = "0.15.5"
prettytable-rs = "0.10.0"
dialoguer = "0.10.3"
lazy_static = "1.4.0"
regex = "1.7.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.10.0"
async-trait = "0.1.64"
futures = "0.3.26"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.6"
base64 = "0.21.0"
syntect = "5.0.0"
toml = "0.7.2"
ctrlc = "3.2.5"
terminal_size = "0.2.5"