[package]
name = "rustorium-contracts"
version = "0.1.0"
authors = ["OpenHands <openhands@all-hands.dev>"]
edition = "2021"

[dependencies]
ink = { version = "4.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "rustorium_contracts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

[workspace]
members = [
    "token",
    "multisig",
    "staking",
    "swap",
]