[package]
name = "rustorium-web"
version = "0.1.0"
edition = "2021"
description = "Web UI for Rustorium"
authors = ["OpenHands <openhands@all-hands.dev>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "HtmlInputElement", 
    "Window", 
    "Document", 
    "Element", 
    "HtmlElement", 
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage"
]}
gloo-net = "0.5.0"
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.79"
thiserror = "1.0.57"
log = "0.4.20"
wasm-logger = "0.2.0"
js-sys = "0.3.69"
chrono = { version = "0.4.35", features = ["serde", "wasmbind"] }