[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"
description = "Web UI server for Rustorium"
authors = ["OpenHands <openhands@all-hands.dev>"]

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.79"
