[package]
name = "rustorium-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustorium-core = { path = "../core" }
rustorium-network = { path = "../network" }
rustorium-consensus = { path = "../consensus" }
rustorium-storage = { path = "../storage" }
rustorium-runtime = { path = "../runtime" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[features]
default = ["full"]
full = ["rest", "websocket", "grpc"]
rest = []
websocket = []
grpc = []
