[package]
name = "gqt-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gqt-core = { path = "../core" }
gqt-network = { path = "../network" }
gqt-consensus = { path = "../consensus" }
gqt-storage = { path = "../storage" }
gqt-runtime = { path = "../runtime" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[features]
default = ["full"]
full = ["rest", "websocket", "grpc"]
rest = []
websocket = []
grpc = []
