[package]
name = "gqt-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gqt-core = { path = "../core", features = ["consensus"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
default = ["hotstuff"]
hotstuff = []
avalanche = []
tendermint = []
raft = []
