[package]
name = "rustorium-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustorium-core = { path = "../core", features = ["consensus"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
default = ["hotstuff"]
hotstuff = []
avalanche = []
tendermint = []
raft = []
