[package]
name = "rustorium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rustorium-network = { path = "../network" }
rustorium-consensus = { path = "../consensus" }
rustorium-storage = { path = "../storage" }
rustorium-api = { path = "../api" }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
