[package]
name = "rustorium-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

[features]
default = []
full = ["network", "consensus", "storage", "runtime"]
network = []
consensus = []
storage = []
runtime = []
