[package]
name = "rustorium-network"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.10"
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux"] }
redpanda = "0.1"

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
