[package]
name = "gqt-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gqt-core = { path = "../core", features = ["network"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
quinn.workspace = true
libp2p.workspace = true

[features]
default = ["quic"]
quic = ["quinn"]
libp2p = ["libp2p"]
custom = []
