[package]
name = "gqt-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gqt-core = { path = "../core", features = ["runtime"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
gluon.workspace = true

[features]
default = ["wasm"]
wasm = []
evm = []
move = []
custom = []
