[package]
name = "rustorium-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tikv-client = "0.3"
redb = "1.0"
noria = "0.10"
poseidon-rs = "0.1"

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
