[package]
name = "gqt-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gqt-core = { path = "../core", features = ["storage"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tikv-client.workspace = true
rocksdb.workspace = true

[features]
default = ["tikv"]
tikv = ["tikv-client"]
rocksdb = ["rocksdb"]
custom = []
